# Pilot_Project

./: .gitignore  pyproject.toml
.github/workflows/: business-deploy.yml
data_analytics/: .gitignore  app.py  data_analytics.ipynb  requirements.txt
data_analytics/data/: database.py
scripts/: backup.sh  deploy.sh  rabbitmq-init.sh  redis-init.sh  setup.sh  test.sh
services/business/: .dummy
services/business/backend/: Dockerfile
services/business/backend/app/: main.py
services/business/backend/app/api/: auth.py  health.py
services/business/backend/app/api/v1/: data.py  router.py
services/business/backend/app/celery_app/: celery_config.py  config.py
services/business/backend/app/core/: config.py  dependencies.py  exceptions.py  security.py
services/business/backend/app/middleware/: auth_middleware.py  error_handler.py
services/business/backend/app/models/: auth.py  data.py
services/business/backend/app/repositories/: base.py  data_repository.py  google_sheets_repository.py
services/business/backend/app/services/: auth_service.py  data_service.py  google_sheets_service.py
services/business/compose/: docker-compose.prod.yml  docker-compose.yml  envsubst_type_unstable.yml
services/business/frontend/: Dockerfile  app.py
services/business/frontend/.streamlit/: config.dev.toml  config.toml
services/business/frontend/app/: main.py  main_sample.py
services/business/frontend/app/auth/: auth_manager.py  session_manager.py
services/business/frontend/app/components/: auth_components.py
services/business/frontend/app/config/: settings.py
services/business/frontend/app/pages/: 1_🏠_Dashboard.py  2_📊_Analytics.py  3_⚙️_Settings.py  dashboard.py  login.py
services/business/frontend/app/styles/: custom.css
services/business/frontend/app/utils/: api_client.py  auth_client.py  cookie_manager.py  loading_manager.py  session_manager.py
services/business/frontend/app/views/: dashboard_management.py  dashboard_operations.py  login.py
services/business/frontend/utils/: api_client.py  auth_utils.py  cookie_utils.py
shared/auth/: cognito_client.py  crypto.py  jwt_handler.py
shared/database/: redis_client.py  supabase_client.py
shared/models/: session.py  user.py
shared/utils/: logger.py
temp/: .env.example  pyproject.toml
temp/.github/workflows/: deploy.yml
temp/dockercompose_sample/: Dockerfile_backend  Dockerfile_frontend  docker-compose.prod.yml
temp/docs/: poetry.md
temp/scripts/: health-check.sh
temp/service/business/backend/: Dockerfile
temp/service/business/backend/app/: main.py
temp/service/business/backend/app/api/routes/: business.py
temp/service/business/backend/app/core/: config.py
temp/service/business/compose/: docker-compose.blue.yml  docker-compose.green.yml  docker-compose.yml
temp/service/business/frontend/: Dockerfile  app.py
temp/service/business/nginx/: nginx.conf
utils/: generate_key.py  generate_rsa_keys.py
(+20 files in other folders)
